# axum-askama-sample

./: Cargo.toml  Dockerfile  README.md  presentation.md
.sqlx/: query-09db5d2bdf331e0bbe61f1a6cf78ec0587da2d51c41d762fb9ad7890d0175d25.json  query-17992636073ca39aebe54dbc133e9d577230787325c7c32587e22c7ea576e1f4.json  query-2a9fdd3e9a4082aa4c5768b4acc7900ea0918ff3adad48ef170e2dff56c7f35e.json  query-50e5d6f3c03225973f38a9e33d31b9df0b61595f15e3a836a8e752a91dcd62bf.json  query-64cd259ff21307ecd0138e20c18cd1b3eba3bce1b254afb9da8b27e84111772a.json  query-822d2c5e151ed5f43d6ccb3c6c4869298fd79ea67ff595d8d28991ff3d9051c6.json
migrations/: 20250629063448_create_todos_table.up.sql
scripts/: init_db.sh
src/: database.rs  error.rs  lib.rs  main.rs
src/routes/: mod.rs  route_handlers.rs  todos.rs
templates/: index.html
