[package]
name = "axum-askama-sample"
version = "0.1.0"
edition = "2021"

[lib]
name = "axum_askama_sample"
path = "src/lib.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

axum = "0.7.5"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
dotenvy = "0.15.7"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres"] }
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0"

[profile.dev.package.askama_derive]
opt-level = 3
