[package]
name = "axum-askama-sample"
version = "0.1.0"
edition = "2021"

[lib]
name = "axum_askama_sample"
path = "src/lib.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

axum = { version = "0.8.4", features = ["macros"] }
askama = { version = "0.14.0"}
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "2.0.12"
async-trait = "0.1"
validator = { version = "0.20.0", features = ["derive"] }

[profile.dev.package.askama_derive]
opt-level = 3
